# interpolation

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  cmake.py
.github/workflows/: ContinuousIntegration.yml
.travis/: build.sh
cmake/: develop_dependencies.cmake  release_dependencies.cmake  unit_testing.cmake
metaconfigure/: description.json  description.py
src/: interpolation.hpp
src/interpolation/: Interpolant.hpp  Tags.hpp  table.hpp
src/interpolation/Interpolant/: Histogram.hpp  LinearLinear.hpp  LinearLogarithmic.hpp  LogarithmicLinear.hpp  LogarithmicLogarithmic.hpp
src/interpolation/Interpolant/Histogram/test/: CMakeLists.txt  Histogram.test.cpp
src/interpolation/Interpolant/LinearLinear/test/: CMakeLists.txt  LinearLinear.test.cpp
src/interpolation/Interpolant/LinearLogarithmic/test/: CMakeLists.txt  integration.test.cpp  interpolate.test.cpp  invert.test.cpp  verifyXGridAssumptions.test.cpp
src/interpolation/Interpolant/LogarithmicLinear/test/: CMakeLists.txt  apply.test.cpp  integration.test.cpp  invert.test.cpp
src/interpolation/Interpolant/LogarithmicLogarithmic/test/: CMakeLists.txt  integration.test.cpp  interpolate.test.cpp  invert.test.cpp  verifyXGridAssumptions.test.cpp  verifyYGridAssumptions.test.cpp
src/interpolation/table/: Implementation.hpp  Type.hpp  Variant.hpp  Vector.hpp  discontinuity.hpp  domain.hpp  left.hpp  right.hpp  search.hpp  transform.hpp
src/interpolation/table/Table/test/: CMakeLists.txt  Table.test.cpp
src/interpolation/table/Type/: Make.hpp  Table.hpp
src/interpolation/table/Type/src/: ctor.hpp  evaluate.hpp  integrate.hpp
src/interpolation/table/Type/test/: CMakeLists.txt  Type.test.cpp
src/interpolation/table/Variant/: Iterator.hpp  Search.hpp  Table.hpp  helper.hpp
src/interpolation/table/Variant/Iterator/: .#helper.hpp
src/interpolation/table/Variant/Iterator/helper/test/: CMakeLists.txt  comparable.test.cpp  diffable.test.cpp  equitable.test.cpp
src/interpolation/table/Variant/Iterator/test/: CMakeLists.txt  Iterator.test.cpp
src/interpolation/table/Variant/test/: CMakeLists.txt  Variant.test.cpp
src/interpolation/table/Vector/: Table.hpp
src/interpolation/table/Vector/src/: ctor.hpp
src/interpolation/table/Vector/test/: CMakeLists.txt  Vector.test.cpp
src/interpolation/table/domain/: Max.hpp  Min.hpp
src/interpolation/table/domain/max/: IsCompiletimeConstant.hpp  IsRuntimeConstant.hpp
src/interpolation/table/domain/max/IsCompiletimeConstant/test/: CMakeLists.txt  IsCompiletimeConstant.test.cpp
src/interpolation/table/domain/max/IsRuntimeConstant/test/: CMakeLists.txt  IsRuntimeConstant.test.cpp
src/interpolation/table/domain/min/: IsCompiletimeConstant.hpp  IsRuntimeConstant.hpp
src/interpolation/table/domain/min/IsCompiletimeConstant/test/: CMakeLists.txt  IsCompiletimeConstant.test.cpp
src/interpolation/table/domain/min/IsRuntimeConstant/test/: CMakeLists.txt  IsRuntimeConstant.test.cpp
src/interpolation/table/left/: interval.hpp
src/interpolation/table/left/interval/: IsAsymptotic.hpp  IsCompiletimeConstant.hpp  IsRuntimeConstant.hpp  IsRuntimeValue.hpp  Throws.hpp
src/interpolation/table/left/interval/IsAsymptotic/test/: CMakeLists.txt  IsAsymptotic.test.cpp
src/interpolation/table/left/interval/IsCompiletimeConstant/test/: CMakeLists.txt  IsCompiletimeConstant.test.cpp
src/interpolation/table/left/interval/IsRuntimeConstant/test/: CMakeLists.txt  IsRuntimeConstant.test.cpp
src/interpolation/table/left/interval/Throws/test/: CMakeLists.txt  Throws.test.cpp
src/interpolation/table/make/test/: CMakeLists.txt  make.test.cpp
src/interpolation/table/right/: interval.hpp
src/interpolation/table/right/interval/: IsAsymptotic.hpp  IsCompiletimeConstant.hpp  IsRuntimeConstant.hpp  IsRuntimeValue.hpp  Throws.hpp
src/interpolation/table/right/interval/IsAsymptotic/test/: CMakeLists.txt  IsAsymptotic.test.cpp
src/interpolation/table/right/interval/IsCompiletimeConstant/test/: CMakeLists.txt  IsCompiletimeConstant.test.cpp
src/interpolation/table/right/interval/IsRuntimeConstant/test/: CMakeLists.txt  IsRuntimeConstant.test.cpp
src/interpolation/table/right/interval/Throws/test/: CMakeLists.txt  Throws.test.cpp
src/interpolation/table/search/: Binary.hpp  Cached.hpp  FromLeft.hpp  FromRight.hpp  Hashed.hpp
src/interpolation/table/search/test/: CMakeLists.txt  search.test.cpp
src/interpolation/table/transform/test/: CMakeLists.txt  transform.test.cpp
src/interpolation/test/: CMakeLists.txt  Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp  Example5.cpp  Example6.cpp  Example7.cpp  Example8.cpp  demo.cpp
