add_executable( interpolation.table.Table.test Table.test.cpp )
set( test_flags ${interpolation_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( interpolation.table.Table.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( interpolation.table.Table.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( interpolation.table.Table.test PUBLIC interpolation )
add_test( NAME interpolation.table.Table COMMAND interpolation.table.Table.test ) 
